k8s/envoy-proxy-gateway/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: my-app-route
  namespace: default # Usually the same namespace as your backend app
spec:
  parentRefs:
  - name: internal-gateway
    namespace: default # Match your Gateway's namespace
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: go-db-service-sample # Your actual K8s Service (ClusterIP)
      port: 8080
      timeouts:
      request: 5s    # If backend takes >5s → Envoy returns error
    retries:        # Request fails → Envoy retries → success (maybe)
      attempts: 3
      perTryTimeout: 2s
