k8s/envoy-proxy-gateway/prometheus-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: prometheus-route
  namespace: monitoring
spec:
  parentRefs:
  - name: internal-gateway
    namespace: default
  hostnames:
  - "prometheus.internal.com"
  rules:
  - backendRefs:
    - name: prometheus-kube-prometheus-prometheus # Exact name of your Prometheus service
      namespace: monitoring
      port: 9090
